fix column content height
https://app.asana.com/0/110018685008094/145308990358727
Turns out `height: 100%` doesn't set you to 100% of the container's height :(
The bottom of each column's content got cut off. Use Flexbox instead.

Test Plan:
WITHOUT crossing `sat-review-mode`, perform "Reading: Literature" and "Right Triangle Trigonometry" SAT practice tasks on latest Chrome, latest Firefox, IE11, IE10, and latest Safari.
Confirm that the entirety of each column's scrollbar is visible, and that scrolling to the bottom of each column shows the bottom of the column's content.

Auditors:
amy

--- a/stylesheets/exercise-content-package/perseus.less
+++ b/stylesheets/exercise-content-package/perseus.less
@@ -913,7 +913,8 @@
             }
 
             .perseus-column {
-                display: inline-block;
+                display: inline-flex;
+                flex-direction: column;
                 vertical-align: top;
                 width: 512px;
 
@@ -972,7 +973,7 @@
             }
 
             .perseus-column-content {
-                height: 100%;
+                flex: 0 1 auto;
                 overflow-y: auto;
 
                 & > .paragraph {
